--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 	<head>					
 	<title>FLIP</title>
 				<link rel="icon" type="image/png" href="favicon.png" />
-				<link rel='stylesheet' media='screen and (max-width: 900px)' href='makeup_narrow.css' />
-				<link rel='stylesheet' media='screen and (min-width: 901px)' href='makeup.css' />
+				<link rel='stylesheet'  href='makeup.css' />
 
 				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>				
 				<script src = "canvas.js"> </script>
@@ -17,7 +16,7 @@
 				<div id = "canvas-container">
 				<div id = "finish_wrap" style="display:none"> 
 						CONGRATULATIONS 
-					<div id= "replay" class = "again"> PLAY AGAIN</div>
+					<p id= "replay" class = "again" style ="color:purple;margin-top:30%">PLAY AGAIN</p>
 				</div>
 
 				</div>
@@ -30,7 +29,8 @@
 				<div id = "current_steps"> 	Steps: <b>0</b></div>
 				<div id = "before_best"> 	Best: <b>1000</b></div>
 				<div id = "menu">
-				<div id= "reset" class = "again" style="color:orange"> RESET </div></div>
+					<div id= "reset" class = "again" style="color:purple;font:xx-large">RESET</div>
+				</div>
 				<div id = "author" style = "font-size:small"><p><i>Developed by Hugo S</i></p></div>
 
 
