mobile/landscape support
www.hugosong.com

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<body>
 		<div id= "main_body" class = "ui">
-			<div id = "gameplay">
+			<div id = "gamePlay">
 				<div id = "canvas-container">
 				<div id = "finish_wrap" style="display:none"> 
 						CONGRATULATIONS 
